<resources>
    <string name="app_name">Bioshare</string>
    <string name="timeout">Timeout occurred, Check your internet connection</string>
    <string name="something_wrong">Error occurred with code</string>

    <string name="drawer_open">openDrawer</string>
    <string name="drawer_close">closeDrawer</string>

    <string name="facebook_app_id">486451761711910</string>
    <string name="loading">Please wait...</string>
    <string name="alert">Alert!</string>
    <string name="connect_working_internet">Please connect to working internet connection</string>
    <string name="fb_login_protocol_scheme">fb486451761711910</string>


    <string name="latitude_label">Latitude:</string>
    <string name="longitude_label">Longitude:</string>

    <string name="latitude_label_D">Destination Latitude:</string>
    <string name="longitude_label_D">Destination Longitude:</string>

    <string name="last_update_time_label">Last updated time:</string>

    <string name="location_updated_message">Location Updated.</string>

    <string name="what_r_u_selling">What Are You Selling?</string>
    <string name="login_get_started_text">Login and get started with BioDiesel</string>
    <string name="allready_register_text">Already registered?</string>

    <string name="no_geocoder_available">No geocoder available</string>

    <string name="fetch_address">Fetch address</string>

    <string name="address_found">Address found</string>

    <string name="no_address_found">Sorry, no address found</string>

    <string name="no_location_data_provided">No location data provided</string>

    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="forgot_password_text">Forgot your Password?\nNo Need to Worry just type in your E-Mail\nwe will getback to you.</string>

    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="Code_text_for_reset_password">A Code will be sent to your Email ID.\nLogin with the Code and change your Password</string>
    <string name="call_permissions_not_granted">Cannot make a call without permission is granted</string>
    <string name="terms_condition_text">By creating an account, you agree to</string>
    <string name="terms_services"><u>Terms of Service</u></string>
    <string name="action_settings" />
    <string name="title_activity_home">BIOSHARE</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string-array name="items_for_sale">
        <item>What are you Selling?</item>
        <item>Machines</item>
        <item>Equipments</item>
        <item>Vegetable Oil</item>
        <item>Chemicals</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_user_sign_up_here">
        <![CDATA[<font color=#000000>New User? </font>]]>
    </string>
    <string name="signUp_textView">
        <![CDATA[<font color=#05B642><u>Sign Up here</u></font>]]>
    </string>
    <string name="already_login_here"><u>Log In here</u></string>

    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="phone_title_text">Enter the verification code sent to</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="sign_out">Sign Out</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification Failed</string>
    <string name="status_verification_succeeded">Verification Succeed!</string>
    <string name="instant_validation">Instant Validation</string>
    <string name="status_sign_in_failed">Signed In Failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="signed_in">signed in</string>
    <string name="change_number">CHANGE HERE</string>
    <string name="select_categories_u_sell">Select the categories you would sell in</string>
</resources>
