<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/customlighterGray"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context="com.example.adityavats.bioshare.PhoneAuthActivity">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbarPhoneAuth"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/customBlue"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/White"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="Verify Phone Number"/>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter One Time Password (OTP)"
            android:textSize="@dimen/dim_16"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:gravity="center"
            android:padding="@dimen/dim_10"
            android:layout_marginTop="@dimen/dim_20"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/Black"
            android:layout_marginTop="@dimen/dim_20"
            android:textSize="@dimen/dim_14"
            android:text="@string/phone_title_text"
            android:gravity="center"
            android:paddingTop="@dimen/dim_10"
            android:paddingLeft="@dimen/dim_10"
            android:paddingRight="@dimen/dim_10"/>

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dim_16"
            android:textColor="@color/Black"
            android:paddingRight="@dimen/dim_10"
            android:paddingLeft="@dimen/dim_10"
            android:gravity="center" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dim_10"
                android:paddingLeft="@dimen/dim_10"
                android:paddingRight="@dimen/dim_10"
                android:text="Not your number?"
                android:textColor="@color/Black"
                android:textSize="@dimen/dim_14"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_number"
                android:textSize="@dimen/dim_14"
                android:textColor="@color/customGreen"
                android:gravity="center"
                android:paddingRight="@dimen/dim_10"
                android:paddingBottom="@dimen/dim_10"/>
        </LinearLayout>


    </LinearLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/Gray"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/phone_auth_fields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2.0">

                <EditText
                    android:id="@+id/field_phone_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone_number"
                    android:layout_weight="1.0"
                    android:inputType="phone"/>

                <EditText
                    android:id="@+id/field_verification_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_verification_code"
                    android:layout_weight="1.0"
                    android:inputType="number"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3.0">

                <Button
                    android:theme="@style/ThemeOverlay.MyDarkButton"
                    android:id="@+id/button_start_verification"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/start_phone_auth"/>

                <Button
                    android:theme="@style/ThemeOverlay.MyDarkButton"
                    android:id="@+id/button_verify_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/verify_phone_auth"/>

                <Button
                    android:theme="@style/ThemeOverlay.MyDarkButton"
                    android:id="@+id/button_resend"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/resend_phone_auth"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/signed_in_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            android:weightSum="1.0">

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/sign_out"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
