<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.adityavats.bioshare.fargments.IndividualSignup">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/customlighterGray">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signUpIndividualtermsConditionTextView"
        android:text="@string/terms_condition_text"
        android:textColor="@color/Black"
        android:gravity="center"
        android:textSize="@dimen/dim_12"
        android:paddingTop="@dimen/dim_20"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout_app_term_services"
        android:layout_below="@+id/signUpIndividualtermsConditionTextView"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/dim_12"
            android:textColor="@color/Black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_services"
            android:textColor="@color/customGreen"
            android:textSize="@dimen/dim_12"
            android:paddingLeft="@dimen/dim_3"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="@dimen/dim_25"
        android:paddingLeft="@dimen/dim_25"
        android:layout_below="@+id/linearLayout_app_term_services"
        android:layout_marginTop="@dimen/dim_20">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/Black"
            android:textSize="@dimen/dim_16"
            android:paddingTop="@dimen/dim_10"
            android:paddingBottom="@dimen/dim_10"
            android:background="@drawable/bottom_border_edittext"
            android:textColorHint="@color/DarkGray"
            android:hint="Full Name"
            android:maxLines="1"
            android:inputType="textPersonName"
            android:id="@+id/indivaidualFirstNameEditText"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/Black"
            android:textSize="@dimen/dim_16"
            android:paddingTop="@dimen/dim_10"
            android:paddingBottom="@dimen/dim_10"
            android:paddingRight="@dimen/dim_10"
            android:background="@drawable/bottom_border_edittext"
            android:textColorHint="@color/DarkGray"
            android:layout_marginTop="@dimen/dim_10"
            android:hint="Email Address"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:id="@+id/indiavidualEmailEditText"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/Black"
            android:textSize="@dimen/dim_16"
            android:paddingTop="@dimen/dim_10"
            android:paddingBottom="@dimen/dim_10"
            android:paddingRight="@dimen/dim_10"
            android:background="@drawable/bottom_border_edittext"
            android:textColorHint="@color/DarkGray"
            android:layout_marginTop="@dimen/dim_10"
            android:hint="Mobile Number"
            android:maxLines="1"
            android:inputType="number"
            android:id="@+id/individualMobileEditText"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/Black"
            android:textSize="@dimen/dim_16"
            android:paddingTop="@dimen/dim_10"
            android:paddingBottom="@dimen/dim_10"
            android:paddingRight="@dimen/dim_10"
            android:background="@drawable/bottom_border_edittext"
            android:textColorHint="@color/DarkGray"
            android:layout_marginTop="@dimen/dim_10"
            android:hint="Username"
            android:maxLines="1"
            android:inputType="textPersonName"
            android:id="@+id/individualUsernameEditText"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/Black"
            android:textSize="@dimen/dim_16"
            android:paddingTop="@dimen/dim_10"
            android:paddingBottom="@dimen/dim_10"
            android:paddingRight="@dimen/dim_10"
            android:background="@drawable/bottom_border_edittext"
            android:textColorHint="@color/DarkGray"
            android:layout_marginTop="@dimen/dim_10"
            android:hint="Password"
            android:maxLines="1"
            android:inputType="textPassword"
            android:id="@+id/individualpasswordEditText"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Location"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:textSize="@dimen/dim_12"
            android:paddingTop="@dimen/dim_10"
            android:paddingBottom="@dimen/dim_10"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/Black"
            android:textSize="@dimen/dim_16"
            android:paddingTop="@dimen/dim_10"
            android:paddingBottom="@dimen/dim_10"
            android:paddingRight="@dimen/dim_10"
            android:background="@drawable/bottom_border_edittext"
            android:textColorHint="@color/DarkGray"
            android:hint="Location"
            android:maxLines="1"
            android:inputType="textPostalAddress"
            android:id="@+id/individualStateEditText"/>
    </LinearLayout>

</RelativeLayout>
</FrameLayout>
